--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title></title>
 </head>
 <body>
-<form action="https://formsubmit.co/your@email.com" method="POST">
+<form action="https://formsubmit.co/sonusonub25@gmail.com" method="POST">
 	Name<input type="text" name="" required><br>
 	Email<input type="email" name="" required><br>
 	Messaage<input type="Text" name="" required><br>
